[package]
name = "nap"
version = "0.0.2"
edition = "2021"
authors = ["Evantaur"]
description = "Suspend-aware alternative to sleep for shell scripts etc."
homepage = "https://github.com/evantaur/nap"
license = "GPL-2.0-or-later"
repository = "https://github.com/evantaur/nap"


[dependencies]

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
