[package]
name = "nap"
version = "0.0.5"
edition = "2021"
authors = ['Evantaur <github@spectralwolf.eu>']
description = "Suspend-aware alternative to sleep for shell scripts etc."
homepage = "https://github.com/evantaur/nap"
license = "GPL-2.0-or-later"
repository = "https://github.com/evantaur/nap"


[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["cargo", "derive"] }

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
